SVN: Fixes for bug#218628 - performance tests
Just some updates to the JPA performance tests and scripts.

- added concurrency tests and jpa tests to build scripts
- fixed JPA perf tests to setup using JPA only
- fixed JPA tests to use JPA perf model, instead of core perf model
- fixed JPA entity manager tests to be server compatible
- added getReference tests ot entity manager tests
- disable security manager by default in core tests, no longer seems to be
required, made test property to enable
- fixed JPA weaving tests
- added JPA SRG test target (entity manager suite for now)
- fixed JPA test scripts to use parameters
- remove hard coded JDBC driver jars from test launch files
- added verifyObject to JPA test root